[gd_scene load_steps=56 format=3 uid="uid://bm0gucsvjp143"]

[ext_resource type="Script" uid="uid://bc70ldoow2kyt" path="res://scenes/ui/title_screen/title_screen.gd" id="1_62kf1"]
[ext_resource type="Texture2D" uid="uid://dodep2wu3ys1c" path="res://assets/title_screen_background.png" id="2_oijkb"]
[ext_resource type="Texture2D" uid="uid://crevy4k6d2mkt" path="res://assets/title_screen_text.png" id="3_x4ugo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4ugo"]
atlas = ExtResource("3_x4ugo")
region = Rect2(8000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_g83d7"]
atlas = ExtResource("3_x4ugo")
region = Rect2(8200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_432bn"]
atlas = ExtResource("3_x4ugo")
region = Rect2(8400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n70d"]
atlas = ExtResource("3_x4ugo")
region = Rect2(8600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7b76"]
atlas = ExtResource("3_x4ugo")
region = Rect2(8200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_77osn"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_de2di"]
atlas = ExtResource("3_x4ugo")
region = Rect2(6400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_5usk4"]
atlas = ExtResource("3_x4ugo")
region = Rect2(6600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_p536w"]
atlas = ExtResource("3_x4ugo")
region = Rect2(6800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_w25b0"]
atlas = ExtResource("3_x4ugo")
region = Rect2(7000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0l0l"]
atlas = ExtResource("3_x4ugo")
region = Rect2(6600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6hcf"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_eah1n"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yb65"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mma6"]
atlas = ExtResource("3_x4ugo")
region = Rect2(6000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoj5q"]
atlas = ExtResource("3_x4ugo")
region = Rect2(6200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff48t"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlkwk"]
atlas = ExtResource("3_x4ugo")
region = Rect2(7200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk1or"]
atlas = ExtResource("3_x4ugo")
region = Rect2(7400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajjme"]
atlas = ExtResource("3_x4ugo")
region = Rect2(7600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri72l"]
atlas = ExtResource("3_x4ugo")
region = Rect2(7800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_577r3"]
atlas = ExtResource("3_x4ugo")
region = Rect2(7400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xput"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_25gfb"]
atlas = ExtResource("3_x4ugo")
region = Rect2(0, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmpua"]
atlas = ExtResource("3_x4ugo")
region = Rect2(200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrt1g"]
atlas = ExtResource("3_x4ugo")
region = Rect2(400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_6heuc"]
atlas = ExtResource("3_x4ugo")
region = Rect2(600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5k72"]
atlas = ExtResource("3_x4ugo")
region = Rect2(800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_u07g4"]
atlas = ExtResource("3_x4ugo")
region = Rect2(1000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7pjr"]
atlas = ExtResource("3_x4ugo")
region = Rect2(1200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_71e5k"]
atlas = ExtResource("3_x4ugo")
region = Rect2(1400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqc7l"]
atlas = ExtResource("3_x4ugo")
region = Rect2(1600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks1we"]
atlas = ExtResource("3_x4ugo")
region = Rect2(1800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw7tk"]
atlas = ExtResource("3_x4ugo")
region = Rect2(2000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1xs8"]
atlas = ExtResource("3_x4ugo")
region = Rect2(2200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmqie"]
atlas = ExtResource("3_x4ugo")
region = Rect2(2400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnmsg"]
atlas = ExtResource("3_x4ugo")
region = Rect2(2600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_xypqu"]
atlas = ExtResource("3_x4ugo")
region = Rect2(2800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_adinj"]
atlas = ExtResource("3_x4ugo")
region = Rect2(3000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j3fl"]
atlas = ExtResource("3_x4ugo")
region = Rect2(3200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0k6c"]
atlas = ExtResource("3_x4ugo")
region = Rect2(3400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uvlf"]
atlas = ExtResource("3_x4ugo")
region = Rect2(3600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncq0n"]
atlas = ExtResource("3_x4ugo")
region = Rect2(3800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox2gp"]
atlas = ExtResource("3_x4ugo")
region = Rect2(4000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_emoqw"]
atlas = ExtResource("3_x4ugo")
region = Rect2(4200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_01jae"]
atlas = ExtResource("3_x4ugo")
region = Rect2(4400, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_oisst"]
atlas = ExtResource("3_x4ugo")
region = Rect2(4600, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nxda"]
atlas = ExtResource("3_x4ugo")
region = Rect2(4800, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_l23k7"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5000, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_60itd"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5200, 0, 200, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds43v"]
atlas = ExtResource("3_x4ugo")
region = Rect2(5400, 0, 200, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_g83d7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4ugo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g83d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_432bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n70d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7b76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77osn")
}],
"loop": false,
"name": &"sparkle_bottom_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_de2di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5usk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p536w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w25b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0l0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6hcf")
}],
"loop": false,
"name": &"sparkle_bottom_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eah1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yb65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mma6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoj5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eah1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff48t")
}],
"loop": false,
"name": &"sparkle_top_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlkwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk1or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajjme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri72l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_577r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xput")
}],
"loop": false,
"name": &"sparkle_top_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25gfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmpua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrt1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6heuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5k72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u07g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7pjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71e5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqc7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks1we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw7tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1xs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmqie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnmsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xypqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adinj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j3fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0k6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uvlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncq0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox2gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emoqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01jae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oisst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nxda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l23k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60itd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds43v")
}],
"loop": false,
"name": &"sword_drop",
"speed": 30.0
}]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_62kf1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 72)
zoom = Vector2(4.515, 4.515)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_oijkb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(126, 72)
sprite_frames = SubResource("SpriteFrames_g83d7")
animation = &"sword_drop"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MenuContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 93.0
offset_bottom = 66.0

[node name="NewGameButton" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="QuitButton" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Quit"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
